GPC/tests/examples/fail/methodNoObject2.gpc


int methodNoObject() {
    
    int x = 5;
    x[2].m1();
    return 0;

}

